--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
   <title>Login | CareMatch</title>
 
   <link rel="icon" type="image/x-icon"
-        href="https://raw.githubusercontent.com/Vaibhav-Patidar/CareMatch/refs/heads/main/static/assets/hero-care.jpg">
+        href="https://raw.githubusercontent.com/Vaibhav-Patidar/CareMatch/refs/heads/main/static/assets/favicon.jpeg">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
