--- a/templates/caregiver-newbie.html
+++ b/templates/caregiver-newbie.html
@@ -159,7 +159,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg px-4">
-  <a class="navbar-brand" href="/caregiver/dashboard">
+  <a class="navbar-brand" href="/caregiver/newcomer">
     <span>♡</span>CareMatch
   </a>
   <div class="ms-auto">
