--- a/templates/caregiver.html
+++ b/templates/caregiver.html
@@ -163,7 +163,7 @@
     <span>♡</span>CareMatch
   </a>
   <div class="ms-auto">
-    <button class="btn btn-outline-primary">Logout</button>
+    <button class="btn btn-outline-primary" onclick="window.location.href='/logout'">Logout</button>
   </div>
 </nav>
 
