--- a/templates/register.html
+++ b/templates/register.html
@@ -208,7 +208,7 @@
       if (role === 'caregiver') {
         window.location.href = '/caregiver/new';
       } else {
-        window.location.href = '/seeker/dashboard';
+        window.location.href = '/seeker/new';
       }
     }
   </script>
