--- a/templates/seeker.html
+++ b/templates/seeker.html
@@ -171,7 +171,7 @@
             </div>
           </div>
           <div class="card-actions">
-            <button class="btn btn-primary btn-sm w-100">View Profile</button>
+            <a href="/caregiver_profile" class="btn btn-primary btn-sm w-100">View Profile</a>
             <button class="btn btn-outline-primary btn-sm w-100">Contact</button>
           </div>
         </div>
