--- a/templates/profile.html
+++ b/templates/profile.html
@@ -95,7 +95,7 @@
 
         <div class="profile-header d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
-                <img src="https://raw.githubusercontent.com/Vaibhav-Patidar/CareMatch/refs/heads/main/static/assets/58623216-c4c3-41c7-8cfd-f60dff5ca655.png" alt="Caregiver Photo" class="profile-img me-3">
+                <img src="https://raw.githubusercontent.com/Vaibhav-Patidar/CareMatch/8f3731f8bfeed5c708d7ad9343ab2dd7ec9890d9/static/assets/profile%20img.png" alt="Caregiver Photo" class="profile-img me-3">
                 <div>
                     <div class="profile-name">Vaibhav Patidar</div>
                     <div class="profile-role">Professional Home Caregiver</div>
